CKAN roles: fix configured schemas
Updating from master branch (FSW version)

--- a/roles/ckan/templates/ckan.ini.j2
+++ b/roles/ckan/templates/ckan.ini.j2
@@ -132,7 +132,7 @@ ckan.plugins = stats text_view image_view recline_view cd2_theme msl_ckan schemi
 ckan.views.default_views = image_view text_view recline_view
 
 # msl_ckan settings
-ckan.scheming.dataset_schemas      = ckanext.msl_ckan:schemas/datasets/cd2_data.collection.yml ckanext.msl_ckan:schemas/datasets/ddi_studyunit.yml ckanext.msl_ckan:schemas/datasets/ddi_group.yml ckanext.msl_ckan:schemas/datasets/cd2_study.yml
+ckan.scheming.dataset_schemas      = ckanext.msl_ckan:schemas/datasets/cd2_measure.yml ckanext.msl_ckan:schemas/datasets/cd2_study.yml
 # msl_ckan_util settings
 ckan.mslfacets.dataset_config      = ckanext.msl_ckan:config/facets.json
 ckan.mslindexfields.field_config   = ckanext.msl_ckan:config/msl_index_fields.json
