Add optional OAI-PMH server plugin
It is not installed by default

--- a/roles/ckan/templates/ckan.ini.j2
+++ b/roles/ckan/templates/ckan.ini.j2
@@ -125,7 +125,11 @@ solr_url = http://127.0.0.1:{{ solr_port }}/solr/ckan
 #		Add ``resource_proxy`` to enable resource proxying and get around the
 #		same origin policy
 #ckan.plugins = stats text_view image_view recline_view
+{% if ckan_install_oaipmh_server_plugin %}
+ckan.plugins = stats text_view image_view recline_view cd2_theme msl_ckan scheming_datasets scheming_groups scheming_organizations msl_custom_facets msl_repeating_fields pages oaipmh
+{% else %}
 ckan.plugins = stats text_view image_view recline_view cd2_theme msl_ckan scheming_datasets scheming_groups scheming_organizations msl_custom_facets msl_repeating_fields pages
+{% endif %}
 
 # Define which views should be created by default
 # (plugins must be loaded in ckan.plugins)
