CKAN role: use CD2 theme favicon

--- a/roles/ckan/templates/ckan.ini.j2
+++ b/roles/ckan/templates/ckan.ini.j2
@@ -155,7 +155,12 @@ ckan.site_title = {{ ckan_site_title }}
 ckan.site_logo = {{ ckan_cd2_logo_relpath }}
 ckan.site_description = {{ ckan_site_description }}
 ckan.site_intro_text = {{ ckan_site_intro_text }}
-ckan.favicon = /base/images/ckan.ico
+
+# The favicon is provided by the CD2 theme
+# original value:
+# ckan.favicon = /base/images/ckan.ico
+ckan.favicon = /img/favicon.ico
+
 ckan.gravatar_default = identicon
 ckan.preview.direct = png jpg gif
 ckan.preview.loadable = html htm rdf+xml owl+xml xml n3 n-triples turtle plain atom csv tsv rss txt json
