--- a/roles/cd2_catalog_docker/templates/env.j2
+++ b/roles/cd2_catalog_docker/templates/env.j2
@@ -1,3 +1,4 @@
+# {{ ansible_managed }}
 # Variables in this file will be substituted into docker-compose.yml
 # Save a copy of this file as .env and insert your own values.
 # Verify correct substitution with "docker-compose config"
