Add param number of UWSGI CKAN workers

--- a/roles/cd2_catalog_docker/templates/env.j2
+++ b/roles/cd2_catalog_docker/templates/env.j2
@@ -14,6 +14,7 @@
 CKAN_SITE_ID="{{ cd2_catalog_ckan_site_id }}"
 CKAN_ADMIN_PASSWORD="{{ cd2_catalog_admin_password }}"
 CKAN_DATABASE_PASSWORD="{{ cd2_catalog_ckan_database_password }}"
+CKAN_UWSGI_NUM_WORKERS="{{ cd2_catalog_ckan_uwsgi_num_workers }}"
 
 # Hostname, IP address and port of the catalog
 CD2_HOST="{{ cd2_catalog_host_name }}"
