YDA-6295: adjust playbook for Dockerized setup
Alter playbook so that it works with the new containerized
setup for CKAN 2.11

Also add CKAN storage directory to backup / restore scripts, so that
files in local CKAN storage (in particular the site logo) can
also be restored from backup.

---------

Co-authored-by: claravox <claravox@users.noreply.github.com>

--- a/roles/cd2_catalog_docker/templates/env.j2
+++ b/roles/cd2_catalog_docker/templates/env.j2
@@ -1,3 +1,4 @@
+# {{ ansible_managed }}
 # Variables in this file will be substituted into docker-compose.yml
 # Save a copy of this file as .env and insert your own values.
 # Verify correct substitution with "docker-compose config"
@@ -10,15 +11,15 @@
 # docker-compose restart ckan # give the db service time to initialize the db cluster on first run
 
 # Image: ckan
-CKAN_SITE_ID=default
-CKAN_ADMIN_PASSWORD=testtest
-CKAN_DATABASE_PASSWORD=defaultpassword
-CKAN_UWSGI_NUM_WORKERS=2
+CKAN_SITE_ID="{{ cd2_catalog_ckan_site_id }}"
+CKAN_ADMIN_PASSWORD="{{ cd2_catalog_admin_password }}"
+CKAN_DATABASE_PASSWORD="{{ cd2_catalog_ckan_database_password }}"
+CKAN_UWSGI_NUM_WORKERS="{{ cd2_catalog_ckan_uwsgi_num_workers }}"
 
 # Hostname, IP address and port of the catalog
-CD2_HOST=cd2.ckan
-CD2_HOST_IP=127.0.0.1
-CD2_HOST_PORT=18443
+CD2_HOST="{{ cd2_catalog_host_name }}"
+CD2_HOST_IP="{{ cd2_catalog_host_ip }}"
+CD2_HOST_PORT="{{ cd2_catalog_host_port }}"
 
 #
 # On AWS, your CKAN_SITE_URL is the output of:
@@ -41,7 +42,7 @@ CKAN_SMTP_PASSWORD=pass
 CKAN_SMTP_MAIL_FROM=ckan@localhost
 #
 # Image: db
-POSTGRES_PASSWORD=ckan
+POSTGRES_PASSWORD="{{ cd2_catalog_postgresql_password }}"
 #
 # POSTGRES_PORT must be available on the host: sudo netstat -na | grep 5432
 # To apply change: docker-compose down && docker rmi docker_db docker_ckan && docker-compose build
@@ -53,14 +54,14 @@ POSTGRES_PORT=5432
 DATASTORE_READONLY_PASSWORD=datastore
 
 # MTA role can be either "mailpit" or "postfix"
-MTA_ROLE=mailpit
+MTA_ROLE="{{ cd2_catalog_mta_role }}"
 
-POSTFIX_RELAYHOST_FQDN=notspecified
-POSTFIX_RELAYHOST_PORT=25
-POSTFIX_RELAYHOST_USERNAME=changeme
-POSTFIX_RELAYHOST_PASSWORD=changeme
-POSTFIX_RELAYHOST_AUTH_ENABLED=yes
-POSTFIX_RELAYHOST_TLS_ENABLED=yes
-POSTFIX_MYHOSTNAME=changeme
-POSTFIX_ORIGIN=changeme
-MAIL_FROM_ADDRESS=cd2@changeme.nl
+POSTFIX_RELAYHOST_FQDN="{{ cd2_catalog_postfix_relayhost_fqdn }}"
+POSTFIX_RELAYHOST_PORT="{{ cd2_catalog_postfix_relayhost_port }}"
+POSTFIX_RELAYHOST_USERNAME="{{ cd2_catalog_postfix_relayhost_username }}"
+POSTFIX_RELAYHOST_PASSWORD="{{ cd2_catalog_postfix_relayhost_password }}"
+POSTFIX_RELAYHOST_AUTH_ENABLED="{{ cd2_catalog_postfix_relayhost_auth_enabled }}"
+POSTFIX_RELAYHOST_TLS_ENABLED="{{ cd2_catalog_postfix_relayhost_tls_enabled }}"
+POSTFIX_MYHOSTNAME="{{ cd2_catalog_postfix_myhostname }}"
+POSTFIX_ORIGIN="{{ cd2_catalog_postfix_origin }}"
+MAIL_FROM_ADDRESS="{{ cd2_catalog_mail_from_address }}"
