YDA-6790 Implement Anubis setup for CD2 catalog
This adds the Anubis web firewall to the CD2 catalog setup,
as a countermeasure against aggressive scraping from AI companies

--- a/roles/cd2_catalog_docker/templates/env.j2
+++ b/roles/cd2_catalog_docker/templates/env.j2
@@ -20,6 +20,7 @@ CKAN_UWSGI_NUM_WORKERS="{{ cd2_catalog_ckan_uwsgi_num_workers }}"
 CD2_HOST="{{ cd2_catalog_host_name }}"
 CD2_HOST_IP="{{ cd2_catalog_host_ip }}"
 CD2_HOST_PORT="{{ cd2_catalog_host_port }}"
+CD2_BEHIND_LOADBALANCER="{{ cd2_catalog_behind_loadbalancer }}"
 
 #
 # On AWS, your CKAN_SITE_URL is the output of:
@@ -65,3 +66,5 @@ POSTFIX_RELAYHOST_TLS_ENABLED="{{ cd2_catalog_postfix_relayhost_tls_enabled }}"
 POSTFIX_MYHOSTNAME="{{ cd2_catalog_postfix_myhostname }}"
 POSTFIX_ORIGIN="{{ cd2_catalog_postfix_origin }}"
 MAIL_FROM_ADDRESS="{{ cd2_catalog_mail_from_address }}"
+
+ANUBIS_ED25519_PRIVATE_KEY="{{ cd2_catalog_anubis_ed25519_private_key }}"
